[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "path-analyze"
version = "0.1.0"
description = "Analyze location track CSV (lat/lon + timestamps) and compute time spent in a geofence (e.g., a lab)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SmallBosser" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]
ui = [
  "streamlit>=1.39.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["path_analyze"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"


